--- a/homeworks/ivan.bieliaiev_Ckakipaki/3-async/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/3-async/style.css
@@ -6,28 +6,31 @@
 
 body{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     border: 10px solid rgb(187, 187, 187);
     background: rgb(0, 162, 255);
 }
 
+/* Main content (All)*/
 .main{
     margin: 0 auto;
-    width: 50%;
-    border: 1px solid black;
+    width: 100%;
+    max-width: 900px;
     border-radius: 30px;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.876);
     overflow: hidden;
 }
 
+/*TOP.Logo with sort and filter option */
 .main__header{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     margin: 20px 50px;
-    height: 30px;
 }
 
+/* Header logo('blog') */
 .header__logo{
     font-size: 25px;
     font-weight: bold;
@@ -38,33 +41,75 @@ body{
     color: rgb(255, 38, 0);
 }
 
-.header__sort{
+/* Header right side(sort option and filter) */
+.header__rightSide{
+    display: flex;
+    flex-direction: row;
     margin: 0 20px 0 300px;
 }
 
-.header__filter{
+/* Header Sorting */
+.sort__section{
+    font-size: 16px;
+    height: 25px;
+    width: 90px;
+    border-radius: 7px;
+    text-transform: uppercase;
 }
 
+/* Header filter */
+.rightSide__filter{
+    height: 25px;
+    font-size: 16px;
+    width: 120px;
+    margin: 0 0 0 30px;
+}
+
+/* Blog posts container */
 .main__blog{
-    background: rgb(187, 187, 187);
+    background: rgb(212, 212, 212);
     padding: 30px 60px;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
+
+/* Post */
 .blog__post{
+    margin: 0 0 30px 0;
     width: 45%;
     padding: 20px;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.876);
     border-radius: 30px;
 }
+
+/* Post title */
 .post__title{
     margin: 0 0 25px 0;
     font-size: 20px;
     text-transform: uppercase;
 }
+
 .post__title::first-letter{
     color: rgb(255, 38, 0);
 }
+
+/* Post innerText */
 .post__text{
     font-size: 17px;
     margin: 0 0 25px 0;
+}
+
+/* Delete post button container */
+.post__delete{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
+
+.delete__button{
+    width: 50px;
 }
