--- a/homeworks/ivan.bieliaiev_Ckakipaki/3-async/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/3-async/style.css
@@ -78,6 +78,7 @@ body{
 
 /* Post */
 .blog__post{
+    position: relative;
     margin: 0 0 30px 0;
     width: 45%;
     padding: 20px;
@@ -104,10 +105,11 @@ body{
 
 /* Delete post button container */
 .post__delete{
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
+    text-align: right;
 }
 
 .delete__button{
