--- a/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/style.css
@@ -17,7 +17,7 @@ body {
   width: 992px;
   height: 900px;
   background: linear-gradient(180deg, #F6F5FB 14.31%, #FEFEFF 94.46%);
-  box-shadow: 0px 4px 96px rgba(0, 0, 0, 0.18);
+  box-shadow: 0 4px 96px rgba(0, 0, 0, 0.18);
   border-radius: 30px;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -29,8 +29,8 @@ body {
   position: relative;
   width: 992px;
   height: 70px;
-  background: #FFFFFF;
-  border-radius: 30px 30px 0px 0px;
+  background: #FFF;
+  border-radius: 30px 30px 0 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -39,13 +39,13 @@ body {
 .blog-logo {
   margin-top: 13px;
   margin-left: 48px;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 42px;
   line-height: 50px;
-  color: #000000;
+  color: #000;
 }
 
-.blog-logo:first-letter {
+.blog-logo::first-letter {
   color: #FF726C;
 }
 
@@ -67,10 +67,10 @@ body {
 
 .blog-sort, .blog-filter {
   padding-left: 10px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 28px;
   background: #F7F6FB;
-  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
 }
 
@@ -91,10 +91,10 @@ body {
   margin-top: 47px;
   width: 414px;
   height: 340px;
-  background: #FFFFFF;
-  box-shadow: 0px 1px 50px rgba(0, 0, 0, 0.06);
+  background: #FFF;
+  box-shadow: 0 1px 50px rgba(0, 0, 0, 0.06);
   border-radius: 30px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .post-title {
@@ -102,13 +102,13 @@ body {
   margin-left: 39px;
   margin-bottom: 25px;
   padding-right: 20px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 24px;
   line-height: 28px;
-  color: #000000;
+  color: #000;
 }
 
-.post-title:first-letter {
+.post-title::first-letter {
   color: #FF726C;
 }
 
@@ -117,8 +117,8 @@ body {
   margin-left: 39px;
   margin-bottom: 25px;
   padding-right: 20px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   line-height: 21px;
-  color: #000000;
+  color: #000;
 }
