--- a/homeworks/roman.kushnirenko_skyprog/3-async/style.css
+++ b/homeworks/roman.kushnirenko_skyprog/3-async/style.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-    border: 1px solid #000;
 }
 body{
     background: #E4EFFE;
@@ -11,7 +10,8 @@ body{
 }
 
 .header{
-    /* position: absolute; */
+    display: flex;
+    justify-content: space-between;
     margin: 0 auto;
     width: 992px;
     height: 70px;
@@ -20,17 +20,55 @@ body{
 }
 
 .header__icon{
-    position: absolute;
     width: 115px;
     height: 50px;
     margin-top: 13px;
     margin-left: 48px;
-    font-family: Rubik;
+    font-family: 'Rubik', sans-serif;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 900;
     font-size: 42px;
     line-height: 50px;
+    color: black;
+}
+
+.header__icon::first-letter{
     color: #FF726C;
+}
+
+.header__inputs{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 17px;
+    margin-right: 28px;
+    width: 347px;
+}
+
+.header__sort{
+    width: 93px;
+    height: 36px;
+    background: #F7F6FB;
+    padding-left: 16px;
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+}
+.header__filter{
+    width: 230px;
+    height: 36px;
+    padding-left: 16px;
+    background: #F7F6FB;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
 }
 
 .content{
@@ -38,17 +76,16 @@ body{
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 0 auto;
-    height: 830px;
+    min-height: 830px;
     width: 992px;
     padding: 0px 47px 55px 40px;
     border-radius: 0px 0px 30px 30px;
     background: linear-gradient(180deg, #F6F5FB 14.31%, #FEFEFF 94.46%);
     box-shadow: 0px 4px 96px rgba(0, 0, 0, 0.18);
-
 }
 
 .content__article {
-    /* position: absolute; space-around*/
+    position: relative;
     width: 416px;
     height: 340px;
     padding: 34px 44px 40px 25px;
@@ -56,10 +93,52 @@ body{
     background: #FFFFFF;
     box-shadow: 0px 1px 50px rgba(0, 0, 0, 0.06);
     border-radius: 30px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
 }
 
-.article__remove--btn{
+.content__article:first-letter{
+    text-transform: uppercase;
+}
+
+.article__text:first-letter{
+    text-transform: uppercase;
+}
+
+.article__title {
+    height: 50px;
+}
+
+.article__remove--btn img {
     width: 57px;
     height: 57px;
-
+    /* background: transparent; */
+    /* position: absolute; */
+    top: 258px;
+    left: 316px;
 }
+
+.article__remove--btn {
+    width: 57px;
+    height: 57px;
+    background: transparent;
+    position: absolute;
+    top: 258px;
+    left: 316px;
+    cursor: pointer;
+    border: none;
+}
+
+.loading{
+    margin: 0 auto;
+    margin-top: 100px;
+    min-width: 200px;
+    height: 200px;
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 60px;
+} 
