--- a/homeworks/volodymyr.khrushch_Vladimior/3-async/css/style.css
+++ b/homeworks/volodymyr.khrushch_Vladimior/3-async/css/style.css
@@ -87,6 +87,7 @@ body {
   border-radius: 30px;
   margin: 10px;
 }
+
 .content__posts {
   display: flex;
   flex-wrap: wrap;
@@ -94,7 +95,6 @@ body {
   background-color: #FFF;
 }
 
-  /* preloader */
 .load {
   position: absolute;
   top: 50%;
@@ -103,6 +103,7 @@ body {
   width: 100px;
   height: 100px;
 }
+
 .load hr {
   border: 0;
   margin: 0;
@@ -117,14 +118,17 @@ body {
   background: #19A68C;
   animation-delay: -1.5s;
 }
+
 .load :nth-child(2) {
   background: #F63D3A;
   animation-delay: -1s;
 }
+
 .load :nth-child(3) {
   background: #FDA543;
-  animation-delay: -0.5s;
+  animation-delay: -.5s;
 }
+
 .load :last-child {
   background: #193B48;
 }
@@ -142,5 +146,5 @@ body {
   }
   75% {
     transform: translate(0, 160%);
- }
+  }
 }
