--- a/homeworks/leonid.lushchiy_deadhar90/3-async/css/general_style.css
+++ b/homeworks/leonid.lushchiy_deadhar90/3-async/css/general_style.css
@@ -1,5 +1,5 @@
-::-webkit-scrollbar { 
-  display: none; 
+::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
   left: 0;
   width: 100%;
   height: 50px;
-  background-color: #fff;
+  background-color: #FFF;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -32,9 +32,9 @@ body {
   padding: 0;
 }
 
-[data-logo] h1, [data-logo] p{
-  padding: 0px;
-  margin: 0px;
+[data-logo] h1, [data-logo] p {
+  padding: 0;
+  margin: 0;
   margin-left: 10px;
   text-align: center;
 }
@@ -85,7 +85,8 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.75);
+  background: #000;
+    opacity: 0.7;
   z-index: 3;
 }
 
@@ -103,7 +104,7 @@ body {
 .rollingSquer {
   width: 100px;
   height: 100px;
-  border: 2px solid #fff;
+  border: 2px solid #FFF;
   animation: rolling 1s infinite;
 }
 
@@ -115,5 +116,5 @@ body {
 .error {
   width: 100px;
   height: 100px;
-  border: 2px solid #f00;
+  border: 2px solid #F00;
 }
