--- a/homeworks/andrii.revskyi_RevskyAndrey/3-async/css/style.css
+++ b/homeworks/andrii.revskyi_RevskyAndrey/3-async/css/style.css
@@ -10,30 +10,69 @@ body {
   padding: 0;
 }
 
-.text_danger {
+.hide {
+  display: none;
+}
+
+.preloader {
+  margin: 100px auto 0;
+  text-align: center;
+}
+
+.title::first-letter {
   color: #F22;
 }
 
 .page-content {
   display: flex;
-  justify-content: stretch;
-  overflow: hidden;
-  height: 100%;
+  height: 1000vh;
   flex-direction: column;
   width: 1200px;
-  margin: 0 auto;
+  margin: 25px auto;
+  background: #F0F0FF;
+  border-radius: 10px;
 }
 
 .header {
   height: 50px;
-  width: 1200px;
-  margin: 25px auto;
-  display: flex;
+  width: 1100px;
+  margin: 10px auto;
+  display: inline-flex;
   justify-content: space-between;
 }
 
+.title {
+  line-height: 30px;
+  font-size: 50px;
+  margin: 10px;
+}
+
+
 .control_area {
+  height: 30px;
   display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.control_area__select {
+  border-radius: 5px;
+  border: none;
+  margin-right: 30px;
+  background: #FFF;
+  text-align: center;
+}
+
+.control_area__search {
+  border-radius: 5px;
+  border: none;
+}
+
+.news-window {
+  width: 1100px;
+  margin: 20px auto;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -42,18 +81,41 @@ body {
   margin: 10px;
   padding: 10px;
   border: 1px solid #CCC;
-  display: flex;
-  justify-content: space-between;
+  border-radius: 25px;
+  width: 500px;
+  background: #FFF;
+  position: relative;
+}
+
+.item__title {
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+}
+
+.item__title::first-letter {
+  color: #F22;
+  text-transform: uppercase;
+}
+
+.item__text {
+  text-align: center;
+  padding: 0 10px ;
 }
 
 .item__delete {
   transition: all .5s ease-out;
   background: #FFF;
   color: #F00;
+  border-radius: 10px;
   border: none;
+  position: absolute;
+  top: 10px;
+  right: 20px;
 }
 
 .item__delete:hover {
   background: #F00;
   color: #FFF;
 }
+
