select arrow styled

--- a/homeworks/roman.buzukov_BuzRom/3-async/css/style.css
+++ b/homeworks/roman.buzukov_BuzRom/3-async/css/style.css
@@ -7,11 +7,6 @@
   font-family: sans-serif;
 }
 
-*:active,
-*:focus {
-  outline: none;
-}
-
 body {
   font-family: "Montserrat", sans-serif;
   min-height: 100vh;
@@ -110,6 +105,10 @@ body {
 }
 
 .header__sort-select {
+  appearance: none;
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAh0lEQVQ4T93TMQrCUAzG8V9x8QziiYSuXdzFC7h4AcELOPQAdXYovZCHEATlgQV5GFTe1ozJlz/kS1IpjKqw3wQBVyy++JI0y1GTe7DCBbMAckeNIQKk/BanALBB+16LtnDELoMcsM/BESDlz2heDR3WePwKSLo5eoxz3z6NNcFD+vu3ij14Aqz/DxGbKB7CAAAAAElFTkSuQmCC");
+  background-repeat: no-repeat;
+  background-position: 45px center;
   width: 25%;
   box-shadow: 0 2px 4px 0 rgba(34, 60, 80, .2);
 }
