--- a/homeworks/igor.doroshenko_igordordev/3-async/style.css
+++ b/homeworks/igor.doroshenko_igordordev/3-async/style.css
@@ -3,8 +3,8 @@
   padding: 0;
 }
 
-h1:first-letter, h2:first-letter, p:first-letter {
-  color: red;
+h1::first-letter, h2::first-letter, p::first-letter {
+  color: #800000;
 }
 
 body {
@@ -20,7 +20,7 @@ body {
   border-top-right-radius: 20px;
   margin: 0 auto;
   width: 1280px;
-  background-color: #FFFFFF;
+  background-color: #FFF;
 }
 
 .header-panel__title {
@@ -70,7 +70,7 @@ body {
   border-radius: 20px;
   height: 300px;
   padding: 20px;
-  background-color: #FFFFFF;
+  background-color: #FFF;
   margin: 25px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, .25);
 }
@@ -80,7 +80,7 @@ body {
   margin-bottom: 25px;
 }
 
-.article__title:first-letter {
+.article__title::first-letter {
   text-transform: uppercase;
 }
 
@@ -102,7 +102,7 @@ body {
   font-size: 24px;
   text-align: center;
   line-height: 300px;
-  color: white;
+  color: #FFF;
   background: rgba(0, 0, 0, .9);
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, .8) 0 0 0 1920px;
