--- a/homeworks/Aleksandr.Turuta_turuta7/3-async/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/3-async/style.css
@@ -5,9 +5,11 @@
   height: auto;
   background: #B6C0C4;
   font-family: "Roboto", sans-serif;
+  margin: 0 auto;
 }
 
 .main {
+  position: relative;
   width: 90%;
   min-height: 200px;
   margin: 0 auto;
@@ -16,6 +18,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 20px;
+  justify-content: center;
 }
 
 .main__header {
@@ -47,22 +50,30 @@
 }
 
 .main__header-button-sort {
+  font-size: 18px;
   min-width: 80px;
   min-height: 30px;
   border-radius: 15px;
   margin-right: 20px;
   transition: .2s;
+  background: #F7F6FB;
 }
 
 .main__header-input-filter {
   width: 100%;
-  min-height: 20px;
-  border-radius: 10px;
+  font-size: 18px;
+  min-height: 30px;
+  border-radius: 15px;
   box-sizing: border-box;
+  background: #F7F6FB;
 }
 
 .main__header-input-filter[type="text"] {
   padding: 0 10px;
+}
+
+.main__header-input-filter::placeholder {
+  color: #CDC1C1
 }
 
 .main__container__messages {
@@ -103,7 +114,50 @@
   transform: scale(1.2);
 }
 
-.loader-container {
+.message {
+  position: fixed;
+  top: 0;
+  width: 90%;
+  height: 100vh;
+  backdrop-filter: blur(4px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.message__window {
+  width: 350px;
+  height: 250px;
+  border: 4px solid #FFF;
+  border-radius: 10px;
+  box-shadow: 0 24px 38px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
+  background: rgba(0,0,0,.75);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.message__button {
+  font-size: 25px;
+  font-weight: 600;
+  width: 90px;
+  height: 40px;
+  background: #BDD740;
+  transition: .2s;
+}
+
+.message__button:hover {
+  background: #5AD65A;
+  transform: scale(1.2);
+}
+
+.message__text {
+  color: #FFF;
+  font-size: 30px;
+}
+
+.loader__container {
   width: 100%;
   height: 100%;
   margin-top: 50%;
