--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/style.css
@@ -47,12 +47,12 @@ body {
   left: 5%;
 }
 
-.headerSort {
+.headerForm {
   position: relative;
-  left: 65%;
+  left: 60%;
 }
 
 .headerFilter {
   position: relative;
-  left: 70%;
+  left: 65%;
 }
