fixed the default sorting bug; added blog filter

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/3-async/css/style.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/3-async/css/style.css
@@ -90,6 +90,10 @@ body {
   border-radius: 30px;
 }
 
+.holder__header__input[type="text"] {
+  padding-left: 20px;
+}
+
 .holder__header__input[type] {
   font-family: "Roboto";
   font-style: normal;
