--- a/homeworks/maksym.selenkov_MaksymSelenkov/3-async/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/3-async/style.css
@@ -23,7 +23,8 @@
 }
 
 .blog {
-  width: 992px;
+  max-width: 992px;
+  width: 100%;
   min-height: 900px;
   background: linear-gradient(180deg, #F6F5FB 14.31%, #FEFEFF 94.46%);
   box-shadow: 0 4px 96px rgba(0, 0, 0, .18);
@@ -32,8 +33,9 @@
 }
 
 .blog__header {
-  width: 992px;
-  height: 70px;
+  max-width: 992px;
+  width: 100%;
+  max-height: 70px;
   background: #FFF;
   border-radius: 30px 30px 0 0;
   display: flex;
@@ -41,8 +43,9 @@
 }
 
 .blog__header-title {
-  width: 115px;
-  height: 50px;
+  max-width: 115px;
+  width: 100%;
+  max-height: 50px;
   font-family: Rubik, serif;
   font-style: normal;
   font-size: 42px;
@@ -58,16 +61,18 @@
 }
 
 .blog__header-sort-button {
-  width: 93px;
-  height: 36px;
+  max-width: 93px;
+  width: 100%;
+  max-height: 36px;
   background: #F7F6FB;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .25);
   border-radius: 30px;
 }
 
 .blog__header-sort-text {
-  width: 45px;
-  height: 28px;
+  max-width: 45px;
+  width: 100%;
+  max-height: 28px;
   font-family: Roboto, serif;
   font-style: normal;
   font-size: 24px;
@@ -76,8 +81,8 @@
 }
 
 .blog__header-sort-symbol {
-  width: 11px;
-  height: 28px;
+  max-width: 11px;
+  max-height: 28px;
   font-family: Roboto, serif;
   font-style: normal;
   font-size: 24px;
@@ -110,8 +115,8 @@
 }
 
 .blog__header-filter {
-  width: 230px;
-  height: 36px;
+  max-width: 230px;
+  max-height: 36px;
   background: #F7F6FB;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, .25);
   border-radius: 30px;
@@ -124,7 +129,8 @@
 }
 
 .blog__content-post {
-  width: 330px;
+  max-width: 330px;
+  width: 100%;
   background: #FFF;
   box-shadow: 0 1px 50px rgba(0, 0, 0, .06);
   border-radius: 30px;
