changed className on post

--- a/homeworks/Ernest.Myrmyr_ErnestMk1/3-async/styles.css
+++ b/homeworks/Ernest.Myrmyr_ErnestMk1/3-async/styles.css
@@ -76,7 +76,7 @@ body {
   justify-content: center;
 }
 
-.post-style {
+.post {
   min-width: calc(var(--screen-width) / 2);
   max-width: calc(var(--screen-width) / 1.2);
   height: 30vh;
