--- a/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/style_blog.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/style_blog.css
@@ -10,7 +10,6 @@ body {
   border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
 }
 
 .blog_filter-filter {
@@ -27,9 +26,10 @@ body {
 
 .blog_container {
   background: #918E8E;
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   width: 90%;
   border-radius: 5px;
 }
@@ -39,6 +39,6 @@ body {
   margin-left: 15px;
   background: #363621;
   width: 150px;
-  height: 100px;
+  height: 200px;
   border-radius: 5px;
 }
