Fixed cycle from FOR to FOREACH and other

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/style.css
@@ -94,6 +94,7 @@ body {
   box-shadow: 0 1px 50px rgba(0, 0, 0, .06);
   border-radius: 30px;
   font-family: "Roboto", sans-serif;
+  list-style-type: none;
 }
 
 .post__title {
