--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/style.css
@@ -19,8 +19,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -30px;
-  margin-top: -30px;
+  transform: translate(-50%, -50%);
   width: 70px;
   height: 70px;
   background-image: url("load.gif");
@@ -123,4 +122,11 @@ body {
 
 .trash-bnt {
   text-align: right;
+}
+
+.trash-btn__link {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
 }
