--- a/homeworks/maksym.selenkov_MaksymSelenkov/3-async/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/3-async/style.css
@@ -50,68 +50,18 @@
   font-style: normal;
   font-size: 42px;
   line-height: 50px;
-  color: #FF726C;
+  color: #0E0E0E;
   margin: 13px 48px 7px;
+}
+
+.blog__header-title::first-letter {
+  color: #FF726C;
 }
 
 .blog__header-sort {
   position: relative;
   display: inline-block;
   margin-left: auto;
-}
-
-.sort__button {
-  max-width: 93px;
-  width: 100%;
-  max-height: 36px;
-  background: #F7F6FB;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, .25);
-  border-radius: 30px;
-}
-
-.sort__text {
-  max-width: 45px;
-  width: 100%;
-  max-height: 28px;
-  font-family: Roboto, serif;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 28px;
-  color: #000;
-}
-
-.sort__symbol {
-  max-width: 11px;
-  max-height: 28px;
-  font-family: Roboto, serif;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 28px;
-  color: #000;
-  transform: rotate(-179.82deg);
-}
-
-.blog__header-sort-content {
-  display: none;
-  background-color: #F9F9F9;
-  min-width: 160px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
-  z-index: 1;
-}
-
-.blog__header-sort-content a {
-  color: #0E0E0E;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.blog__header-sort:hover .blog__header-sort-content {
-  display: block;
-}
-
-.blog__header-sort:hover .blog__header-sort-button {
-  background-color: #3E8E41;
 }
 
 .blog__header-filter {
@@ -128,7 +78,7 @@
   flex-wrap: wrap;
 }
 
-.blog__content-post {
+.post {
   max-width: 330px;
   width: 100%;
   background: #FFF;
@@ -144,7 +94,12 @@
   font-style: normal;
   font-size: 24px;
   line-height: 28px;
+  color: #0E0E0E;
+}
+
+.post__title::first-letter {
   color: #FF726C;
+  font-size: 180%;
 }
 
 .post__text {
