correction some comments

--- a/homeworks/volodymyr.khrushch_Vladimior/3-async/css/style.css
+++ b/homeworks/volodymyr.khrushch_Vladimior/3-async/css/style.css
@@ -24,12 +24,12 @@ body {
   font-weight: 700;
 }
 
-.header__logo--link {
+.header__logo__link {
   text-decoration: none;
   color: #000;
 }
 
-.header__logo--link:hover {
+.header__logo__link:hover {
   color: #FF726C;
 }
 
@@ -75,7 +75,7 @@ body {
   align-self: center;
 }
 
-.header__sorting-icon {
+.header__sorting__icon {
   width: 93px;
   height: 36px;
   border-radius: 30px;
@@ -88,7 +88,7 @@ body {
   outline: none;
 }
 
-.header__filter-input {
+.header__filter__input{
   font-size: 18px;
   line-height: 21px;
   padding-left: 16px;
